fixed button spacing in msg div using flex

--- a/client/styles.css
+++ b/client/styles.css
@@ -794,6 +794,7 @@ html, body {
 .msg { /*controls size, positioning (itself/flex), and color*/
 	display: flex;
 	flex-direction: row;
+	justify-content: space-between;
 	width: 80%;
 	padding-left: 20px;
 	background-color: #13896D;
@@ -802,6 +803,10 @@ html, body {
 	/*background gradient*/
 	background-image: linear-gradient(#5DFDCB, #2BAD8F);
 	background-attachment: fixed;
+}
+
+.modeContainer {
+	width: 41px;
 }
 
 .editOff {/*rounded edges, shadow on hover*/
